--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,8 +1,21 @@
 {
-	"rewrites": [
+	"version": 2,
+	"builds": [
 		{
-			"source": "/(.*)",
-			"destination": "/"
+			"src": "./index.js",
+			"use": "@vercel/node"
+		}
+	],
+	"routes": [
+		{
+			"src": "/(.*)",
+			"dest": "/",
+			"methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+			"headers": {
+				"Access-Control-Allow-Origin": "*",
+				"Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
+				"Access-Control-Allow-Headers": "Content-Type"
+			}
 		}
 	]
 }
