--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,21 +1,8 @@
 {
-	"version": 2,
-	"builds": [
+	"rewrites": [
 		{
-			"src": "./index.js",
-			"use": "@vercel/node"
-		}
-	],
-	"routes": [
-		{
-			"src": "/(.*)",
-			"dest": "/",
-			"methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-			"headers": {
-				"Access-Control-Allow-Origin": "*",
-				"Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
-				"Access-Control-Allow-Headers": "Content-Type"
-			}
+			"source": "/(.*)",
+			"destination": "/"
 		}
 	]
 }
