--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,8 +1,10 @@
 {
-	"rewrites": [
+	"version": 2,
+	"builds": [
 		{
-			"source": "/(.*)",
-			"destination": "/"
+			"src": "./index.js",
+			"use": "@vercel/node"
 		}
-	]
+	],
+	"routes": [{ "src": "/(.*)", "dest": "/" }]
 }
